--- a/front/css/variables.css
+++ b/front/css/variables.css
@@ -15,7 +15,7 @@
     --gris: #dfded5;
     --rojo: #f46a6a;
     --rojo-oscuro: #e94949;
-    --error: #631616;
+    --error: #ac2b2b;
     --gris1: #ddd;
     --gris2: #ccc;
     --gris3: #666;
