--- a/front/css/componentes/card.css
+++ b/front/css/componentes/card.css
@@ -106,7 +106,14 @@
   font-size: 14px;
   padding: 6px;
   border-radius: 6px;
-  color: #555;
+}
+
+.card-action-btn.edit{
+  color: #1e8fffb4;
+}
+
+.card-action-btn.delete{
+  color: #e53835bd;
 }
 
 .card-action-btn.edit:hover {
