--- a/front/css/variables.css
+++ b/front/css/variables.css
@@ -1,10 +1,10 @@
 :root {
-    --verde: #b9d8b8;
-    --verde-oscuro: #a0c79f;
-    --amarillo: #f1cd71;
-    --amarillo-oscuro: #ebc45f;
-    --blanco: #f7f6ed;
-    --negro: #47413e;
+    --verde: #bddcbc;
+    --verde-oscuro: #9fc59e;
+    --amarillo: #f2cf7a;
+    --amarillo-oscuro: #e8bf5a;
+    --blanco: #faf9f2;
+    --negro: #3f3a37;
     --naranja: #fa6d48;
     --naranja-oscuro: #e46545;
     --celeste: #a6cde4;
