--- a/front/css/perfil.css
+++ b/front/css/perfil.css
@@ -32,10 +32,12 @@ body, html {
 .navigation-options {
     display: flex;
     gap: 0;
-    background: transparent;
+    background: var(--amarillo);
     border-radius: 8px;
     box-shadow: 8px 5px 10px rgba(0,0,0,0.1);
-    color: #000000;
+    color: var(--negro);
+    margin-bottom: 10px;
+    border: var(--border-estandar);
 }
 
 .nav-option {
@@ -49,8 +51,7 @@ body, html {
 }
 
 .nav-option.active {
-    background: var(--amarillo);
-    border: var(--border-estandar);
+    background: var(--amarillo-oscuro);
 }
 
 .nav-option:hover:not(.active) {
@@ -79,13 +80,10 @@ body, html {
 
 
 
-/* Tableros */
 .tableros-container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(265px, 1fr));
     gap: 20px;
-    cursor: pointer;
-    margin-top: 20px;
 }
 
 .tablero-item {
@@ -127,13 +125,6 @@ body, html {
     border-radius: 12px;
     white-space: nowrap;
 }
-
-.tablero-descripcion {
-    color: var(--gris3);
-    overflow: hidden;
-    padding: 5px;
-}
-
 .tablero-hashtag {
   background: #f0f2f5;
   color: var(--azul);
@@ -720,19 +711,22 @@ body, html {
 .edit-modal-top-actions .btn-cancelar {
     background: var(--gris1);
     border: none;
+    font-family: var(--nunito);
     padding: 8px 16px;
     border-radius: 6px;
     cursor: pointer;
+    color: var(--negro);
 }
 
 .edit-modal-top-actions .btn-guardar {
     background: var(--amarillo); 
     color: var(--negro);
-    border: none;
+    font-family: var(--nunito);
     padding: 8px 20px;
     border-radius: 6px;
     cursor: pointer;
     font-weight: bold;
+    border: none;
 }
 .edit-modal-top-actions .btn-guardar:hover {
     background: var(--amarillo-oscuro);
@@ -808,25 +802,44 @@ body, html {
 
 
 #publicaciones-tablero-grid {
-  display: block;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); 
-  gap: 20px;
+    display: block;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); 
+    gap: 20px;
+    margin-left: 10px;
 }
 
 .tablero-detalle-header {
     width: 100%;
-    margin-bottom: 30px;
     display: block; 
-    margin-left: 10px;
+    margin-left: 20px;
     font-size: 28px;
 }
-
+.tablero-etiquetas{
+    margin: 0;
+    margin-left: -8px;
+}
+.tablero-etiquetas .tablero-hashtag{
+    background: var(--blanco);
+    color: var(--azul);
+}
 .tablero-hashtags-container {
     margin-top: 10px;
     display: flex;
     gap: 8px;
     flex-wrap: wrap;
 }
+
+.tablero-hashtags-container .tablero-hashtag{
+    background: var(--amarillo);
+    color: var(--negro);
+}
 .btn-atras{
     background: var(--amarillo);
+    color: var(--negro);
+    font-family: var(--nunito);
+    margin-bottom: 5px;
+    padding: 10px;
+    border-radius: 8px;
+    cursor: pointer;
+    margin-left: -10px;
 }
