--- a/front/css/componentes/modal.css
+++ b/front/css/componentes/modal.css
@@ -5,7 +5,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.5);
+    background-color: #00000080;
 }
 @media (max-width: 1000px) {
   .pines-section {
